--- a/src/main/resources/test.conf
+++ b/src/main/resources/test.conf
@@ -17,12 +17,12 @@ swagger {
 
 db {
     jdbcDriver = "org.postgresql.Driver"
-    jdbcUrl = "jdbc:postgresql://localhost:45533/dev_mem"
-    dbUser = "dev"
-    dbPassword = "dev"
+    jdbcUrl = "jdbc:postgresql://ep-long-hill-a2w0rjv5.eu-central-1.aws.neon.tech/neondb?sslmode=require"
+    dbUser = "neondb_owner"
+    dbPassword = "pCd74TXWvwDL"
     maxPoolSize = 5
 }
 
 flyway {
-    clean = true
+    clean = false
 }
